--- a/report_fema.qmd
+++ b/report_fema.qmd
@@ -17,6 +17,7 @@ library(glue)
 library(showtext)
 library(tidycensus)
 library(ggh4x)
+library(tigris)
 
 options(scipen = 9999)
 set.seed(708)
@@ -44,20 +45,20 @@ theme_set(
       plot.title = element_text(size = base_size + 14L),
       plot.subtitle = element_text(size = base_size + 8L),
       #panel.border = element_rect(color = "grey25", fill = NA, size = .25),
-	  	#plot.title = element_text(size = 18),
-			axis.text.x = element_text(angle = 90, vjust = +.5),
-	  	axis.ticks = element_line(),
-      panel.spacing = unit(0, 'in'),
+      #plot.title = element_text(size = 18),
+      axis.text.x = element_text(angle = 90, vjust = +.5),
+      axis.ticks = element_line(),
+      panel.spacing = unit(0, 'in')
       #axis.title.y = element_blank()
-
     )
 )
 ```
 
+
+
 ```{r data}
 #| echo: false
 #| message: false
-#| cache: true
 if (!file.exists('data/raw/wfbz_disasters_2000-2025.geojson')) {
   stop(
     "Manually download data set from https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/DWILBW and unzip to data/raw."
@@ -81,97 +82,126 @@ wfbz <- wfbz %>%
 
 states_sf <- tigris::states(progress_bar = FALSE)
 
-regions <- read_sf(unzip_url(
-  "https://data.fs.usda.gov/geodata/edw/edw_resources/shp/S_USA.AdministrativeRegion.zip",
-  dst = tempfile(fileext = ".shp")
-)) %>%
-  select(usfs_region = REGIONNAME) %>%
-  mutate(usfs_region = str_replace(usfs_region, " Region", ""))
-
-regions <- bind_rows(
-  regions,
-  st_filter(
-    regions %>%
-      filter(usfs_region == 'Pacific Southwest') %>%
-      st_cast("POLYGON"),
-    states_sf %>% filter(STUSPS == 'HI')
+if (!file.exists('data/raw/tiger_counties.geojson')) {
+  counties_pop <- get_decennial(
+    geography = "county",
+    variables = "P1_001N", # Total population variable in 2020 Census
+    year = 2020,
+    geometry = TRUE,
+    output = "wide",
+    progress_bar = FALSE
   ) %>%
-    group_by(usfs_region) %>%
-    summarize(geometry = st_combine(geometry)) %>%
-    mutate(usfs_region = 'Hawaii'),
-  st_filter(
-    regions %>%
-      filter(usfs_region == 'Pacific Southwest') %>%
-      st_cast("POLYGON"),
-    states_sf %>% filter(STUSPS == 'CA')
+    rename(population = P1_001N) %>%
+    select(population, geometry)
+  write_sf(counties_pop, 'data/raw/tiger_counties.geojson')
+} else {
+  counties_pop <- 'data/raw/tiger_counties.geojson'
+}
+
+if (!file.exists('data/raw/tiger_states.geojson')) {
+  states_pop <- get_decennial(
+    geography = "state",
+    variables = "P1_001N", # Total population variable in 2020 Census
+    year = 2020,
+    geometry = TRUE,
+    output = "wide",
+    progress_bar = FALSE
   ) %>%
-    group_by(usfs_region) %>%
-    summarize(geometry = st_combine(geometry)) %>%
-    mutate(usfs_region = 'California')
-) %>%
-  filter(usfs_region != 'Pacific Southwest') %>%
-  mutate(
-    usfs_region = if_else(
-      usfs_region == 'Northern',
-      'Northern Rockies',
-      usfs_region
-    )
-  ) %>%
-  mutate(
-    usfs_region = if_else(
-      usfs_region == 'Rocky Mountain',
-      'Southern Rockies',
-      usfs_region
-    )
-  )
-
-counties_pop <- get_decennial(
-  geography = "county",
-  variables = "P1_001N", # Total population variable in 2020 Census
-  year = 2020,
-  geometry = TRUE,
-  output = "wide",
-  progress_bar = FALSE
-) %>%
-  rename(population = P1_001N) %>%
-  select(population, geometry)
-
-states_pop <- get_decennial(
-  geography = "state",
-  variables = "P1_001N", # Total population variable in 2020 Census
-  year = 2020,
-  geometry = TRUE,
-  output = "wide",
-  progress_bar = FALSE
-) %>%
-  rename(population = P1_001N) %>%
-  select(NAME, population, geometry) %>%
-  left_join(tidycensus::fips_codes %>% select(state_abb = state, NAME = state_name) %>% distinct()) %>%
-  rename(state_name = NAME)
-
-regions$usfs_region_pop <- aggregate(
-  st_centroid(counties_pop),
-  regions,
-  FUN = sum
-)$population # centroid more or less ensures counties only end up in one region
+    rename(population = P1_001N) %>%
+    select(NAME, population, geometry) %>%
+    left_join(
+      tidycensus::fips_codes %>%
+        select(state_abb = state, NAME = state_name) %>%
+        distinct()
+    ) %>%
+    rename(state_name = NAME)
+  write_sf(states_pop, 'data/raw/tiger_states.geojson')
+} else {
+  states_pop <- read_sf('data/raw/tiger_states.geojson')
+}
 
 # Order regions consistently
 REGION_ORDER <- tibble(
-  usfs_region = c("California", "Southern", "Alaska", "Southern Rockies", "Southwestern",
-"Northern Rockies", "Intermountain", "Pacific Northwest", "Eastern",
-"Hawaii"),
+  usfs_region = c(
+    "California",
+    "Southern",
+    "Alaska",
+    "Southern Rockies",
+    "Southwestern",
+    "Northern Rockies",
+    "Intermountain",
+    "Pacific Northwest",
+    "Eastern",
+    "Hawaii"
+  ),
   plot_order = 10:1
 )
-
 # Palette
 region_colors <- c(khroma::color('light', reverse = FALSE)(9), '#ac87cc')
 region_colors[region_colors == '#dddddd'] <- '#757575' # lil darker
 attr(region_colors, "missing") <- NA
 names(region_colors) <- sort(REGION_ORDER$usfs_region)
+
+
+if (!file.exists('data/processed/regions.geojson')) {
+  regions <- read_sf(unzip_url(
+    "https://data.fs.usda.gov/geodata/edw/edw_resources/shp/S_USA.AdministrativeRegion.zip",
+    dst = tempfile(fileext = ".shp")
+  )) %>%
+    select(usfs_region = REGIONNAME) %>%
+    mutate(usfs_region = str_replace(usfs_region, " Region", ""))
+
+  regions <- bind_rows(
+    regions,
+    st_filter(
+      regions %>%
+        filter(usfs_region == 'Pacific Southwest') %>%
+        st_cast("POLYGON"),
+      states_sf %>% filter(STUSPS == 'HI')
+    ) %>%
+      group_by(usfs_region) %>%
+      summarize(geometry = st_combine(geometry)) %>%
+      mutate(usfs_region = 'Hawaii'),
+    st_filter(
+      regions %>%
+        filter(usfs_region == 'Pacific Southwest') %>%
+        st_cast("POLYGON"),
+      states_sf %>% filter(STUSPS == 'CA')
+    ) %>%
+      group_by(usfs_region) %>%
+      summarize(geometry = st_combine(geometry)) %>%
+      mutate(usfs_region = 'California')
+  ) %>%
+    filter(usfs_region != 'Pacific Southwest') %>%
+    mutate(
+      usfs_region = if_else(
+        usfs_region == 'Northern',
+        'Northern Rockies',
+        usfs_region
+      )
+    ) %>%
+    mutate(
+      usfs_region = if_else(
+        usfs_region == 'Rocky Mountain',
+        'Southern Rockies',
+        usfs_region
+      )
+    )
+
+  regions$usfs_region_pop <- aggregate(
+    st_centroid(counties_pop),
+    regions,
+    FUN = sum
+  )$population # centroid more or less ensures counties only end up in one region
+
+  write_sf(regions, 'data/processed/regions.geojson')
+} else {
+  regions <- read_sf('data/processed/regions.geojson')
+}
 ```
 
 
-```{r, cache = TRUE}
+```{r}
 # Find Nearest Region
 wfbz_region <- regions$usfs_region[st_nearest_feature(
   wfbz,
@@ -204,26 +234,69 @@ by_state <- wfbz %>%
   summarize(
     `Events` = n(),
     `Fatalities` = sum(wildfire_max_civil_fatalities, na.rm = TRUE),
-    `Fatalities per 100K` = 100000 * sum(wildfire_max_civil_fatalities / population, na.rm = TRUE),
+    `Fatalities per 100K` = 100000 *
+      sum(wildfire_max_civil_fatalities / population, na.rm = TRUE),
     `Structures Destroyed` = sum(wildfire_struct_destroyed, na.rm = TRUE),
     `FEMA Declarations` = sum(wildfire_fema_dec, na.rm = TRUE),
-    `FEMA Declaration Percent` = `FEMA Declarations`/`Events`,
+    `FEMA Declaration Percent` = `FEMA Declarations` / `Events`,
     `Burned Area` = sum(wildfire_area, na.rm = TRUE),
     `WUI-Intermix` = sum(str_detect(wildfire_wui, 'intermix'), na.rm = TRUE),
     `WUI-Interface` = sum(str_detect(wildfire_wui, 'interface'), na.rm = TRUE),
     .groups = 'drop'
   )
 by_state <- by_state %>%
-  arrange(desc(`FEMA Declaration Percent`)) %>%
-  mutate(state_abb = factor(row_number(), levels = row_number(), labels = state_abb))
+  arrange(desc(`FEMA Declaration Percent`), state_abb) %>%
+  mutate(
+    state_abb = factor(row_number(), levels = row_number(), labels = state_abb),
+    state_name = factor(
+      row_number(),
+      levels = row_number(),
+      labels = state_name
+    )
+  )
 ```
 
-### Fema Declaration Liklihood by State
+### Fema Declaration Likelihood by State
 
-```{r}
+```{r, fig.height = 9, fig.width = 9}
+cols <- khroma::color('light', reverse = FALSE)(1)
 ggplot() +
-  geom_point(data = by_state, aes(x = state_abb, y = `FEMA Declaration Percent`)) +
-  scale_y_continuous(labels = ~format(round(100*.x)))
+  geom_col(
+    data = by_state,
+    aes(y = state_name, x = `FEMA Declaration Percent`),
+    fill = cols,
+    color = 'white'
+  ) +
+  geom_text(
+    data = by_state,
+    aes(
+      y = state_name,
+      x = `FEMA Declaration Percent`,
+      label = case_when(
+        between(`FEMA Declaration Percent`, .001, .02) ~ paste0(
+          sprintf('%.1f', 100 * `FEMA Declaration Percent`),
+          '%'
+        ),
+        `FEMA Declaration Percent` < .001 ~ '',
+        TRUE ~ paste0(sprintf('%.0f', 100 * `FEMA Declaration Percent`), '%'),
+      ),
+      hjust = 0
+    ),
+    color = 'grey10'
+  ) +
+  scale_x_continuous(
+    labels = ~ paste0(format(round(100 * .x)), '%'),
+    name = 'Events declared disaster',
+    expand = c(0, 0, 0, .15)
+  ) +
+  scale_y_discrete(name = '', limits = rev, expand = c(.01, .01)) +
+  theme(
+    panel.margin = unit(0, 'cm'),
+    axis.ticks = element_blank(),
+    axis.text.y = element_text(hjust = 1),
+    panel.grid.major.x = element_line(linewidth = .25, color = 'grey10'),
+    panel.grid.minor.x = element_line(linewidth = .25, color = 'grey75')
+  )
 ```
 
 ### Events vs. FEMA Declarations
@@ -234,9 +307,12 @@ Natural Scale
 ggplot() +
   geom_abline(slope = 1, intercept = 0, linetype = 'dashed', color = 'grey75') +
   geom_point(data = by_state, aes(x = Events, y = `FEMA Declarations`)) +
-  ggrepel::geom_label_repel(data = by_state, aes(x = Events, y = `FEMA Declarations`, label = state_abb)) +
-  scale_x_continuous(labels = ~format(round(.x), big.mark = ',')) +
-  scale_y_continuous(labels = ~format(round(.x), big.mark = ',')) +
+  ggrepel::geom_label_repel(
+    data = by_state,
+    aes(x = Events, y = `FEMA Declarations`, label = state_abb)
+  ) +
+  scale_x_continuous(labels = ~ format(round(.x), big.mark = ',')) +
+  scale_y_continuous(labels = ~ format(round(.x), big.mark = ',')) +
   coord_equal()
 ```
 
@@ -246,9 +322,18 @@ Log Scale
 ggplot() +
   geom_abline(slope = 1, intercept = 0, linetype = 'dashed', color = 'grey75') +
   geom_point(data = by_state, aes(x = Events, y = `FEMA Declarations`)) +
-  ggrepel::geom_label_repel(data = by_state, aes(x = Events, y = `FEMA Declarations`, label = state_abb)) +
-  scale_x_continuous(transform = 'pseudo_log', labels = ~format(round(.x), big.mark = ',')) +
-  scale_y_continuous(transform = 'pseudo_log', labels = ~format(round(.x), big.mark = ',')) +
+  ggrepel::geom_label_repel(
+    data = by_state,
+    aes(x = Events, y = `FEMA Declarations`, label = state_abb)
+  ) +
+  scale_x_continuous(
+    transform = 'pseudo_log',
+    labels = ~ format(round(.x), big.mark = ',')
+  ) +
+  scale_y_continuous(
+    transform = 'pseudo_log',
+    labels = ~ format(round(.x), big.mark = ',')
+  ) +
   coord_equal(ratio = 1)
 
 ```
@@ -261,9 +346,12 @@ Natural Scale
 ```{r}
 ggplot() +
   geom_point(data = by_state, aes(x = Fatalities, y = `FEMA Declarations`)) +
-  ggrepel::geom_label_repel(data = by_state, aes(x = Fatalities, y = `FEMA Declarations`, label = state_abb)) +
-  scale_x_continuous(labels = ~format(round(.x), big.mark = ',')) +
-  scale_y_continuous(labels = ~format(round(.x), big.mark = ','))
+  ggrepel::geom_label_repel(
+    data = by_state,
+    aes(x = Fatalities, y = `FEMA Declarations`, label = state_abb)
+  ) +
+  scale_x_continuous(labels = ~ format(round(.x), big.mark = ',')) +
+  scale_y_continuous(labels = ~ format(round(.x), big.mark = ','))
 ```
 
 Log Scale
@@ -271,9 +359,18 @@ Log Scale
 ```{r}
 ggplot() +
   geom_point(data = by_state, aes(x = Fatalities, y = `FEMA Declarations`)) +
-  ggrepel::geom_label_repel(data = by_state, aes(x = Fatalities, y = `FEMA Declarations`, label = state_abb)) +
-  scale_x_continuous(transform = 'pseudo_log', labels = ~format(round(.x), big.mark = ',')) +
-  scale_y_continuous(transform = 'pseudo_log', labels = ~format(round(.x), big.mark = ','))
+  ggrepel::geom_label_repel(
+    data = by_state,
+    aes(x = Fatalities, y = `FEMA Declarations`, label = state_abb)
+  ) +
+  scale_x_continuous(
+    transform = 'pseudo_log',
+    labels = ~ format(round(.x), big.mark = ',')
+  ) +
+  scale_y_continuous(
+    transform = 'pseudo_log',
+    labels = ~ format(round(.x), big.mark = ',')
+  )
 ```
 
 
@@ -283,20 +380,38 @@ Natural Scale
 
 ```{r}
 ggplot() +
-  geom_point(data = by_state, aes(x = `Structures Destroyed`, y = `FEMA Declarations`)) +
-  ggrepel::geom_label_repel(data = by_state, aes(x = `Structures Destroyed`, y = `FEMA Declarations`, label = state_abb)) +
-  scale_x_continuous(labels = ~format(round(.x), big.mark = ',')) +
-  scale_y_continuous(labels = ~format(round(.x), big.mark = ','))
+  geom_point(
+    data = by_state,
+    aes(x = `Structures Destroyed`, y = `FEMA Declarations`)
+  ) +
+  ggrepel::geom_label_repel(
+    data = by_state,
+    aes(x = `Structures Destroyed`, y = `FEMA Declarations`, label = state_abb)
+  ) +
+  scale_x_continuous(labels = ~ format(round(.x), big.mark = ',')) +
+  scale_y_continuous(labels = ~ format(round(.x), big.mark = ','))
 ```
 
 Log Scale
 
 ```{r}
 ggplot() +
-  geom_point(data = by_state, aes(x = `Structures Destroyed`, y = `FEMA Declarations`)) +
-  ggrepel::geom_label_repel(data = by_state, aes(x = `Structures Destroyed`, y = `FEMA Declarations`, label = state_abb)) +
-  scale_x_continuous(transform = 'pseudo_log', labels = ~format(round(.x), big.mark = ',')) +
-  scale_y_continuous(transform = 'pseudo_log', labels = ~format(round(.x), big.mark = ','))
+  geom_point(
+    data = by_state,
+    aes(x = `Structures Destroyed`, y = `FEMA Declarations`)
+  ) +
+  ggrepel::geom_label_repel(
+    data = by_state,
+    aes(x = `Structures Destroyed`, y = `FEMA Declarations`, label = state_abb)
+  ) +
+  scale_x_continuous(
+    transform = 'pseudo_log',
+    labels = ~ format(round(.x), big.mark = ',')
+  ) +
+  scale_y_continuous(
+    transform = 'pseudo_log',
+    labels = ~ format(round(.x), big.mark = ',')
+  )
 ```
 
 Natural Scale, no California
@@ -304,15 +419,21 @@ Natural Scale, no California
 
 ```{r}
 ggplot() +
-  geom_point(data = by_state %>% filter(state_abb != 'CA'), aes(x = `Structures Destroyed`, y = `FEMA Declarations`)) +
-  ggrepel::geom_label_repel(data = by_state %>% filter(state_abb != 'CA'), aes(x = `Structures Destroyed`, y = `FEMA Declarations`, label = state_abb)) +
-  scale_x_continuous(labels = ~format(round(.x), big.mark = ',')) +
-  scale_y_continuous(labels = ~format(round(.x), big.mark = ','))
+  geom_point(
+    data = by_state %>% filter(state_abb != 'CA'),
+    aes(x = `Structures Destroyed`, y = `FEMA Declarations`)
+  ) +
+  ggrepel::geom_label_repel(
+    data = by_state %>% filter(state_abb != 'CA'),
+    aes(x = `Structures Destroyed`, y = `FEMA Declarations`, label = state_abb)
+  ) +
+  scale_x_continuous(labels = ~ format(round(.x), big.mark = ',')) +
+  scale_y_continuous(labels = ~ format(round(.x), big.mark = ','))
 ```
 
 
 ```{r}
-hexgrid <- st_make_grid(states_pop, square = FALSE, n = c(300, 300)) %>%
+hexgrid <- st_make_grid(states_pop, square = FALSE, n = c(500, 500)) %>%
   st_as_sf() %>%
   mutate(hexid = row_number()) %>%
   st_filter(states_pop)
@@ -333,11 +454,11 @@ hex_summary <- hexgrid %>%
   st_shift_longitude()
 
 theme_update(
-    axis.ticks.x = element_blank(),
-    axis.ticks.y = element_blank(),
-    axis.text.x = element_blank(),
-    axis.text.y = element_blank(),
-    axis.line = element_blank()
+  axis.ticks.x = element_blank(),
+  axis.ticks.y = element_blank(),
+  axis.text.x = element_blank(),
+  axis.text.y = element_blank(),
+  axis.line = element_blank()
 )
 ```
 
@@ -346,9 +467,13 @@ theme_update(
 Events
 
 ```{r}
-ggplot(hex_summary) +
-  geom_sf(data = st_shift_longitude(states_pop), fill = 'grey90') +
-  geom_sf(aes(fill = Events), color = NA) +
+ggplot() +
+  geom_sf(
+    data = shift_geometry(hex_summary),
+    aes(fill = Events),
+    color = NA
+  ) +
+  geom_sf(data = shift_geometry(states_pop), fill = NA, color = 'grey25') +
   scale_fill_distiller(palette = 'Spectral', name = '')
 
 ```
@@ -356,10 +481,15 @@ ggplot(hex_summary) +
 FEMA Declarations
 
 ```{r}
-ggplot(hex_summary) +
-  geom_sf(data = st_shift_longitude(states_pop), fill = 'grey90') +
-  geom_sf(aes(fill = `FEMA Declarations`), color = NA) +
+ggplot() +
+  geom_sf(
+    data = shift_geometry(hex_summary),
+    aes(fill = `FEMA Declarations`),
+    color = NA
+  ) +
+  geom_sf(data = shift_geometry(states_pop), fill = NA, color = 'grey25') +
   scale_fill_distiller(palette = 'Spectral', name = '')
+
 ```
 
 Declarations per Event
@@ -368,15 +498,28 @@ _How to disentangle that FEMA Declarations makes an event?_
 
 ```{r}
 ggplot() +
-  geom_sf(data = st_shift_longitude(states_pop), fill = 'grey90') +
-  geom_sf(data = hex_summary, aes(fill = `FEMA Declarations`/Events), color = NA) +
+  geom_sf(
+    data = shift_geometry(hex_summary),
+    aes(fill = `FEMA Declarations` / Events),
+    color = NA
+  ) +
+  geom_sf(data = shift_geometry(states_pop), fill = NA, color = 'grey25') +
   scale_fill_distiller(palette = 'Spectral', name = '')
 ```
 
 Declarations per Event (Scale Shifted)
 ```{r}
+#| include: false
 ggplot() +
-  geom_sf(data = st_shift_longitude(states_pop), fill = 'grey90') +
-  geom_sf(data = hex_summary, aes(fill = `FEMA Declarations`/Events), color = NA) +
-  scale_fill_distiller(palette = 'Spectral', name = '', values = c(0, scales::breaks_log()(c(.0001,1))))
+  geom_sf(
+    data = shift_geometry(hex_summary),
+    aes(fill = `FEMA Declarations` / Events),
+    color = NA
+  ) +
+  geom_sf(data = shift_geometry(states_pop), fill = NA, color = 'grey25') +
+  scale_fill_distiller(
+    palette = 'Spectral',
+    name = '',
+    values = c(0, scales::breaks_log()(c(.0001, 1)))
+  )
 ```
