--- a/reports/main.qmd
+++ b/reports/main.qmd
@@ -1,5 +1,5 @@
 ---
-title: "WFBZ Summaries"
+title: "Summaries by Variable"
 toc: true
 execute:
   echo: false
@@ -7,260 +7,7 @@ execute:
   message: false
 ---
 
-
-```{r packages}
-library(tidyverse)
-library(sf)
-library(patchwork)
-library(gt)
-library(glue)
-library(showtext)
-library(tidycensus)
-library(ggh4x)
-
-options(scipen = 9999)
-set.seed(708)
-```
-
-```{r theme}
-# Set Font Arial
-showtext_auto()
-font_add("Arial", regular = "LiberationSans-Regular.ttf")
-base_size = 16
-theme_set(
-  ggplot2::theme_minimal(
-    base_family = 'Arial',
-    base_size = base_size
-  ) +
-    ggplot2::theme(
-      legend.background = element_blank(),
-      legend.key = element_blank(),
-      panel.background = element_blank(),
-      panel.border = element_blank(),
-      strip.background = element_blank(),
-      plot.background = element_blank(),
-      axis.line = element_blank(),
-      panel.grid = element_blank(),
-      plot.title = element_text(size = base_size + 14L),
-      plot.subtitle = element_text(size = base_size + 8L)
-    )
-)
-```
-
-```{r data}
-#| echo: false
-#| message: false
-if (!file.exists('data/raw/wfbz_disasters_2000-2025.geojson')) {
-  stop(
-    "Manually download data set from https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/DWILBW and unzip to data/raw."
-  )
-}
-
-unzip_url <- function(url, dst) {
-  download.file(
-    url = url,
-    destfile = t <- tempfile(fileext = ".zip")
-  )
-  unzip(t, overwrite = TRUE, exdir = dst)
-  unlink(t, recursive = TRUE)
-  dst
-}
-
-wfbz <- read_sf("data/raw/wfbz_disasters_2000-2025.geojson") %>%
-  filter(!st_is_empty(geometry))
-wfbz <- wfbz %>%
-  filter(!str_detect(wildfire_complex_names, '(FLOOD$|FLOOD 2013$)')) # remove some colorado floods that snuck in
-
-states_sf <- tigris::states(progress_bar = FALSE)
-
-if(!file.exists('data/raw/tiger_counties.geojson')){
-  counties_pop <- get_decennial(
-    geography = "county",
-    variables = "P1_001N", # Total population variable in 2020 Census
-    year = 2020,
-    geometry = TRUE,
-    output = "wide",
-    progress_bar = FALSE
-  ) %>%
-    rename(population = P1_001N) %>%
-    select(population, geometry)
-  write_sf(counties_pop, 'data/raw/tiger_counties.geojson')
-}else{
-  counties_pop <- 'data/raw/tiger_counties.geojson'
-}
-
-if(!file.exists('data/raw/tiger_states.geojson')){
-  states_pop <- get_decennial(
-    geography = "state",
-    variables = "P1_001N", # Total population variable in 2020 Census
-    year = 2020,
-    geometry = TRUE,
-    output = "wide",
-    progress_bar = FALSE
-  ) %>%
-    rename(population = P1_001N) %>%
-    select(NAME, population, geometry) %>%
-    left_join(tidycensus::fips_codes %>% select(state_abb = state, NAME = state_name) %>% distinct()) %>%
-    rename(state_name = NAME)
-  write_sf(states_pop, 'data/raw/tiger_states.geojson')
-}else{
-  states_pop <- read_sf('data/raw/tiger_states.geojson')
-}
-
-# Order regions consistently
-REGION_ORDER <- tibble(
-  usfs_region = c("California", "Southern", "Alaska", "Southern Rockies", "Southwestern",
-"Northern Rockies", "Intermountain", "Pacific Northwest", "Eastern",
-"Hawaii"),
-  plot_order = 10:1
-)
-# Palette
-region_colors <- c(khroma::color('light', reverse = FALSE)(9), '#ac87cc')
-region_colors[region_colors == '#dddddd'] <- '#757575' # lil darker
-attr(region_colors, "missing") <- NA
-names(region_colors) <- sort(REGION_ORDER$usfs_region)
-
-
-if(!file.exists('data/processed/regions.geojson')){
-  regions <- read_sf(unzip_url(
-    "https://data.fs.usda.gov/geodata/edw/edw_resources/shp/S_USA.AdministrativeRegion.zip",
-    dst = tempfile(fileext = ".shp")
-  )) %>%
-    select(usfs_region = REGIONNAME) %>%
-    mutate(usfs_region = str_replace(usfs_region, " Region", ""))
-
-  regions <- bind_rows(
-    regions,
-    st_filter(
-      regions %>%
-        filter(usfs_region == 'Pacific Southwest') %>%
-        st_cast("POLYGON"),
-      states_sf %>% filter(STUSPS == 'HI')
-    ) %>%
-      group_by(usfs_region) %>%
-      summarize(geometry = st_combine(geometry)) %>%
-      mutate(usfs_region = 'Hawaii'),
-    st_filter(
-      regions %>%
-        filter(usfs_region == 'Pacific Southwest') %>%
-        st_cast("POLYGON"),
-      states_sf %>% filter(STUSPS == 'CA')
-    ) %>%
-      group_by(usfs_region) %>%
-      summarize(geometry = st_combine(geometry)) %>%
-      mutate(usfs_region = 'California')
-  ) %>%
-    filter(usfs_region != 'Pacific Southwest') %>%
-    mutate(
-      usfs_region = if_else(
-        usfs_region == 'Northern',
-        'Northern Rockies',
-        usfs_region
-      )
-    ) %>%
-    mutate(
-      usfs_region = if_else(
-        usfs_region == 'Rocky Mountain',
-        'Southern Rockies',
-        usfs_region
-      )
-    )
-
-  regions$usfs_region_pop <- aggregate(
-    st_centroid(counties_pop),
-    regions,
-    FUN = sum
-  )$population # centroid more or less ensures counties only end up in one region
-
-  write_sf(regions, 'data/processed/regions.geojson')
-}else{
-  regions <- read_sf('data/processed/regions.geojson')
-}
-```
-
-
-```{r}
-# Find Nearest Region
-wfbz_region <- regions$usfs_region[st_nearest_feature(
-  wfbz,
-  regions,
-  pairwise = TRUE
-)]
-wfbz_region_area <- as.numeric(
-  st_area(regions)[st_nearest_feature(wfbz, regions, pairwise = TRUE)] /
-    1000 /
-    1000
-)
-wfbz_region_pop <- regions$usfs_region_pop[st_nearest_feature(
-  wfbz,
-  regions,
-  pairwise = TRUE
-)]
-
-
-wfbz_crit <- wfbz %>%
-  st_drop_geometry() %>%
-  mutate(
-    usfs_region = wfbz_region,
-    usfs_region_area = wfbz_region_area,
-    usfs_region_pop = wfbz_region_pop
-  ) %>%
-  filter(wildfire_community_intersect) %>%
-  group_by(usfs_region, wildfire_year) %>%
-  summarize(
-    `Events` = n(),
-    `Fatalities` = sum(wildfire_max_civil_fatalities, na.rm = TRUE),
-    `Fatalities per 100K` = 100000 *
-      sum(wildfire_max_civil_fatalities / usfs_region_pop, na.rm = TRUE),
-    `Structures Destroyed` = sum(wildfire_struct_destroyed, na.rm = TRUE),
-    `FEMA Declarations (n)` = sum(wildfire_fema_dec, na.rm = TRUE),
-    `Burned Area` = sum(wildfire_area, na.rm = TRUE),
-    `Burned Area Percent` = 100 *
-      sum(wildfire_area / usfs_region_area, na.rm = TRUE),
-    `WUI-Intermix` = sum(str_detect(wildfire_wui, 'intermix'), na.rm = TRUE),
-    `WUI-Interface` = sum(str_detect(wildfire_wui, 'interface'), na.rm = TRUE),
-    `WUI-Intermix Percent` = 100 *
-      sum(str_detect(wildfire_wui, 'intermix'), na.rm = TRUE) /
-      n(),
-    `WUI-Interface Percent` = 100 *
-      sum(str_detect(wildfire_wui, 'interface'), na.rm = TRUE) /
-      n(),
-   `Mean Fire Size` = mean(wildfire_area, na.rm = TRUE),
-    .groups = 'drop'
-  )
-
-wfbz_crit_all <- wfbz %>%
-  st_drop_geometry() %>%
-  mutate(
-    usfs_region = wfbz_region,
-    usfs_region_area = wfbz_region_area,
-    usfs_region_pop = wfbz_region_pop
-  ) %>%
-  group_by(usfs_region, wildfire_year) %>%
-  summarize(
-    `Events` = n(),
-    `Fatalities` = sum(wildfire_max_civil_fatalities, na.rm = TRUE),
-    `Fatalities per 100K` = 100000 *
-      sum(wildfire_max_civil_fatalities / usfs_region_pop, na.rm = TRUE),
-    `Structures Destroyed` = sum(wildfire_struct_destroyed, na.rm = TRUE),
-    `FEMA Declarations (n)` = sum(wildfire_fema_dec, na.rm = TRUE),
-    `Burned Area` = sum(wildfire_area, na.rm = TRUE),
-    `Burned Area Percent` = 100 *
-      sum(wildfire_area / usfs_region_area, na.rm = TRUE),
-    `WUI-Intermix` = sum(str_detect(wildfire_wui, 'intermix'), na.rm = TRUE),
-    `WUI-Interface` = sum(str_detect(wildfire_wui, 'interface'), na.rm = TRUE),
-    `WUI-Intermix Percent` = 100 *
-      sum(str_detect(wildfire_wui, 'intermix'), na.rm = TRUE) /
-      n(),
-    `WUI-Interface Percent` = 100 *
-      sum(str_detect(wildfire_wui, 'interface'), na.rm = TRUE) /
-      n(),
-    `Mean Fire Size` = mean(wildfire_area, na.rm = TRUE),
-    .groups = 'drop'
-  )
-
-
-```
+{{< include _setup.qmd >}}
 
 
 ```{r}
